<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_slashmain_bw"
    android:weightSum="7"
    tools:context=".InscriptionActivity">


    <ImageView
        android:id="@+id/signin_logo"
        android:layout_width="171dp"
        android:layout_height="102dp"
        android:layout_marginTop="40dp"
                app:srcCompat="@drawable/ic_launcher_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/hello_txt"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/connect_h4"
        android:textColor="@color/text_in_white"
        android:textSize="18sp"
        android:textStyle="normal"

        android:layout_marginLeft="27dp" />

    <TextView
        android:id="@+id/welc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/righteous"
        android:includeFontPadding="true"
        android:text="@string/connect_h2"
        android:textColor="@color/text_in_white"
        android:textSize="40sp"
        android:textStyle="bold"
        />


    <ImageView
        android:id="@+id/connect_thing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"

        app:srcCompat="@drawable/ic_trait_simple"

        android:layout_marginLeft="27dp"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/signin_to_continue_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/connect_inscription"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginLeft="27dp" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edit_text_fname"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/connect_fname"

        android:inputType="text"
        android:paddingLeft="20dp" />


    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_fname"
        android:hint="@string/connect_name"
        android:paddingLeft="20dp"
        android:fontFamily="@font/roboto_light"
        android:inputType="text"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="27dp"
        android:background="@drawable/ic_btn_sp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/connect_join"
        android:textColor="@color/background"
        android:textSize="16sp"
        android:onClick="saveUser"
        app:backgroundTint="@null"
        android:layout_marginLeft="27dp" />

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-48dp"
        android:background="@drawable/ic_btn_sp"
        android:fontFamily="@font/roboto_medium"
        android:onClick="seConnecter"
        android:text="@string/connect_already_sign"
        android:textColor="@color/background"
        app:backgroundTint="@null"
        android:textSize="16sp"
       />

    <ImageView
        android:id="@+id/connect_thing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"

        app:srcCompat="@drawable/ic_trait_simple2"

        android:layout_marginLeft="27dp"
        tools:ignore="VectorDrawableCompat" />

</LinearLayout>