<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableauScoresActivity"
    android:orientation="vertical"
    android:background="@color/background"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/tableau_scores"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="@font/righteous"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="@font/righteous"
            android:text="@string/joueur"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="@font/righteous"
            android:text="@string/score"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewAdapter"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:layout_marginTop="50dp"

        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

    </ListView>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_btn_sp"
        android:text="@string/client_menu"
        android:onClick="menu"
        app:backgroundTint="@null"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

</LinearLayout>