<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutMain"
    android:background="@drawable/ic_main_bwm"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="385dp"
        android:layout_height="123dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic__0_85253"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></ImageView>

    <TextView
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/roboto_medium"
        android:rotationX="23"
        android:text="@string/felicitations"
        android:textColor="@color/profile_color"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="305dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="368dp"
        android:text="@string/felicitation_texte"
        android:textColor="@color/profile_color"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <Button
        android:id="@+id/button"

        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="112dp"
        app:backgroundTint="@color/main_text"
        android:background="@drawable/ic_gradient_bt"
        android:onClick="menu"
        android:text="@string/felicitation_btn1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="112dp"

        android:background="@drawable/ic_gradient_bt"
        android:onClick="scores"
        android:text="@string/felicitation_btn2"
        app:backgroundTint="@color/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toEndOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>