<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_main_bwm"
    android:id="@+id/layoutMain"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="247dp"
        android:layout_height="155dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"


        android:layout_marginTop="16dp"
        android:src="@drawable/fail_img"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"></ImageView>

    <TextView
        android:id="@+id/nombre_erreurs"
        android:layout_width="336dp"
        android:layout_height="49dp"
        android:layout_marginBottom="420dp"
        android:gravity="center"
        android:text="@string/error_main"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="181dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:text="@string/error_mxm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <!-- Bouton d'Action -->

    <Button
        android:id="@+id/button8"
        android:layout_width="170dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginBottom="176dp"
        android:background="@drawable/ic_btn_sp"
        android:onClick="correction"
        android:text="@string/error_corriger"
        android:textColor="@color/background"

        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button7"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/ic_btn_sp"

        android:onClick="menu"
        android:text="@string/error_return"

        android:textColor="@color/background"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />


</androidx.constraintlayout.widget.ConstraintLayout>